<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_fragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:background="@color/lite_gray"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/appbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/app_name" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_search" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- TableLayout -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:background="@color/white">


                <TextView
                    android:id="@+id/title1"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/home_page_user_name"
                    android:textSize="17dp"
                    tools:ignore="MissingConstraints" />
                <!-- User picture -->

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="172dp"
                    android:layout_height="234dp"
                    android:layout_marginTop="40dp"
                    app:cardCornerRadius="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/user_picture"
                        android:layout_width="170dp"
                        android:layout_height="133dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/img_user_picture"
                        tools:layout_editor_absoluteX="29dp"
                        tools:layout_editor_absoluteY="80dp" />

                    <!-- user name -->
                    <TextView
                        android:id="@+id/user_name"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/home_page_user_name"
                        android:textSize="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView" />


                    <!-- profession -->

                    <!-- localisation -->
                    <TextView
                        android:id="@+id/profession"
                        style="@style/text_gray"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/home_page_profession"
                        app:layout_constraintStart_toStartOf="@+id/user_name"
                        app:layout_constraintTop_toBottomOf="@+id/user_name" />

                    <TextView
                        android:id="@+id/localisation"
                        style="@style/subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/home_page_localisation"
                        app:layout_constraintStart_toStartOf="@+id/profession"
                        app:layout_constraintTop_toBottomOf="@+id/profession" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/white"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/white"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>